--- a/CLTproject.Rmd
+++ b/CLTproject.Rmd
@@ -108,7 +108,6 @@ print(paste('mean = ', mean(my1000$k9),' sd = ',sd(my1000$k9)))
 
 The previous graph shows that the mean is getting closer and closer to 50 and the standard deviation is decreasing which is by CLT theory. The standard deviation was expected, because the sample standard deviation was 41.83 and when divided by square root 9 (the sample size) it equals approximately 13.93, which is close to the results of approximately 14. overall, the graph is getting more symmetrical. 
 
-
 ```{r}
 numb=16
 Hdata = Homers_data[sample(1:1000, size=numb*1000, replace=T),"kkardashtemp"]
@@ -151,8 +150,4 @@ print(paste('mean = ', mean(my1000$k16),' sd = ',sd(my1000$k)))
 
 ```
 
-
-
-
-
-
+The graph is looking more symmetrical, because now we are using 23 samples at a time which gives for more chances for opinion discrepancies. and the standard deviation is decreasing as expected becuse we are dividing by a larger number. in this case it's the square root of 24 
