--- a/CLTproject.Rmd
+++ b/CLTproject.Rmd
@@ -128,7 +128,7 @@ print(paste('mean = ', mean(my1000$k16),' sd = ',sd(my1000$k)))
 
 ```
 
-The graph is looking more symmetrical because now we are using 16 samples at a time which gives more chance for opinion discrepancies. and the standard deviation is decreasing as expected because we are dividing by a larger number. in this case, it's the square root of 16 which equals 4. 
+The graph is looking more symmetrical because now we are using 16 samples at a time which gives more chance for opinion discrepancies. and the standard deviation is decreasing as expected because we are dividing by a larger number. in this case, it's the square root of 16 which equals 4. and its closer to our expected value which is 10.466788
 
 ```{r}
 numb=25
