--- a/CLTproject.Rmd
+++ b/CLTproject.Rmd
@@ -150,7 +150,7 @@ print(paste('mean = ', mean(my1000$k16),' sd = ',sd(my1000$k)))
 
 ```
 
-The graph is looking more symmetrical, because now we are using 25 samples at a time which gives for more chances for opinion discrepancies. and the standard deviation is decreasing as expected because we are dividing by a larger number. in this case it's the square root of 25. 
+The graph is looking more symmetrical, because now we are using 25 samples at a time which gives for more chances for opinion discrepancies. and the standard deviation is decreasing as expected because we are dividing by a larger number. in this case it's the square root of 25. and its closer to our expected value which is 8.373430402
 
 ```{r}
 numb=36
