--- a/CLTproject.Rmd
+++ b/CLTproject.Rmd
@@ -171,7 +171,7 @@ p + ggtitle("n = 36") +
 print(paste('mean = ', mean(my1000$k36),' sd = ',sd(my1000$k)))
 
 ```
-The graph is looking more symmetrical because now we are using 36 samples at a time which gives more chance for opinion discrepancies. and the standard deviation is decreasing as expected because we are dividing by a larger number in this case it's the square root of 36. this graph, in addition to the previous ones, demonstrated the central limit theorem by showing standard deviation as we increase the sample size. 
+The graph is looking more symmetrical because now we are using 36 samples at a time which gives more chance for opinion discrepancies. and the standard deviation is decreasing as expected because we are dividing by a larger number in this case it's the square root of 36. and its closer to our expected value which is 6.977858668. This graph, in addition to the previous ones, demonstrated the central limit theorem by showing standard deviation as we increase the sample size. and its closer to our expected value which is 
 
 
 
